--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     },
     "dependencies": {
         "core-js": "^3.8.3",
+        "material-design-icons-iconfont": "^6.7.0",
         "vue": "^3.2.13",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "vuetify": "^3.8.4"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
