--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "core-js": "^3.8.3",
         "material-design-icons-iconfont": "^6.7.0",
+        "swiper": "^11.2.6",
         "vue": "^3.2.13",
         "vue-router": "^4.5.1",
         "vuetify": "^3.8.4"
