--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "core-js": "^3.8.3",
         "material-design-icons-iconfont": "^6.7.0",
         "swiper": "^11.2.6",
