--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
+        "axios": "^1.9.0",
         "core-js": "^3.8.3",
         "material-design-icons-iconfont": "^6.7.0",
         "swiper": "^11.2.6",
