--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^1.9.0",
         "core-js": "^3.8.3",
         "material-design-icons-iconfont": "^6.7.0",
+        "pinia": "^3.0.2",
         "swiper": "^11.2.6",
         "vue": "^3.2.13",
         "vue-router": "^4.5.1",
