--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "core-js": "^3.8.3",
         "material-design-icons-iconfont": "^6.7.0",
         "pinia": "^3.0.2",
+        "pinia-plugin-persistedstate": "^4.3.0",
         "swiper": "^11.2.6",
         "vue": "^3.2.13",
         "vue-router": "^4.5.1",
