--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "swiper": "^11.2.6",
         "vue": "^3.2.13",
         "vue-router": "^4.5.1",
+        "vue3-kakao-maps": "^2.3.10",
         "vuetify": "^3.8.4"
     },
     "devDependencies": {
